# postgresql

./: 0001-Add-test-to-detect-changes-to-the-Numeric-format-wri.patch  0001-Increase-NBASE-from-10-000-to-100-000-000.patch  0002-Add-backward-compatibility-for-NBASE-1e8-numeric-for.patch  0003-Add-protocol-negotiation-for-NBASE-1e8-numeric-binar.patch  0003-Optimize-Numeric-disk-space-utilization-for-small-nu.patch  0004-Add-explicit-min-max-limits-for-Numeric-dscale-and-w.patch  0005-Upgrade-NumericDigit-type-from-int16-to-int32.patch  0006-Optimize-Numeric-by-increasing-NBASE-from-10_000-to-.patch  AGENTS.md  CLAUDE.md  PURPOSE.md  backend_parking.md  bench-init.sql  bench.sql  claude-handover.md  configure.ac  convert-libpq-to-zig.sh  cte_test.sql  fk-join-row-preservation.md  fk-join-spec.md  fk-join-spec.tex  json-schema-generate-instruction.md  json_schema_generate.sql  logfile  meson.build  nbase1e4.out  nbase1e8.out  passkey-entitlements.plist  pg-fido2tls-spec.txt  procsignal-atomics-refactor.md  spec.md  test_gpu_final.sql  test_gpu_full_sort.sql  test_gpu_m3_max.sql  test_gpu_performance.sql  test_gpu_simple.sql  test_gpu_sort.sql  test_gpu_sort_verify.sql  test_metal.c  test_zero_copy.sql
contrib/ddl_logger/: Makefile  README  USAGE.md  ddl_logger.c  meson.build  test_ddl_logger.sh
src/backend/utils/sort/: Makefile  compile_metal.sh  compile_metal_direct.sh  gpu_sort.air  gpu_sort.metal  gpu_sort.metallib  gpu_sort_direct.air  gpu_sort_direct.metal  gpu_sort_direct.metallib  meson.build  tuplesort.c  tuplesort_gpu.c  tuplesort_gpu_direct.m
(+429 files in other folders)
